--- a/move_base/CMakeLists.txt
+++ b/move_base/CMakeLists.txt
@@ -42,6 +42,7 @@ add_library(move_base
 target_link_libraries(move_base
     ${Boost_LIBRARIES}
     ${catkin_LIBRARIES}
+    efence
     )
 add_dependencies(move_base move_base_gencfg)
 add_dependencies(move_base geometry_msgs_gencpp)
@@ -49,7 +50,7 @@ add_dependencies(move_base geometry_msgs_gencpp)
 add_executable(move_base_node
   src/move_base_node.cpp
 )
-target_link_libraries(move_base_node move_base)
+target_link_libraries(move_base_node move_base efence)
 set_target_properties(move_base_node PROPERTIES OUTPUT_NAME move_base)
 
 install(DIRECTORY launch
