--- a/costmap_2d/cfg/ObstructionPlugin.cfg
+++ b/costmap_2d/cfg/ObstructionPlugin.cfg
@@ -10,7 +10,8 @@ gen.add("max_obstacle_height", double_t, 0, "The maximum height of any obstacle 
 gen.add("cost_scaling_factor", double_t, 0, "A scaling factor to apply to cost values during inflation.", 10, 0, 100)
 gen.add("inflation_radius", double_t, 0, "The radius in meters to which the map inflates obstacle cost values.", 0.55, 0, 50)
 
+gen.add("enable_decay", bool_t, 0, "Whether to decay obstructions or not", True)
 gen.add("obstruction_half_life", double_t, 0, "How long until the obstruction decays to half of its value", 5, 0, 100)
-gen.add("num_obstruction_levels", int_t, 0, "The number of times an obstruction will decay before it is removed completely.", 5, 0, 50)
+gen.add("num_obstruction_levels", int_t, 0, "The number of times an obstruction will decay before it is removed completely.", 5, 1, 50)
 
 exit(gen.generate("costmap_2d", "costmap_2d", "ObstructionPlugin"))
