Added new trajectory generator and the ability to switch modes for the navigation system.

--- a/base_local_planner/CMakeLists.txt
+++ b/base_local_planner/CMakeLists.txt
@@ -78,6 +78,7 @@ catkin_package(
 
 add_library(base_local_planner
     src/euclidean_distance_cost_function.cpp
+    src/follower_trajectory_generator.cpp
     src/footprint_helper.cpp
     src/goal_functions.cpp
     src/heading_cost_function.cpp
