--- a/dwa_local_planner/cfg/DWAPlanner.cfg
+++ b/dwa_local_planner/cfg/DWAPlanner.cfg
@@ -44,4 +44,10 @@ gen.add("use_dwa", bool_t, 0, "Use dynamic window approach to constrain sampling
 
 gen.add("restore_defaults", bool_t, 0, "Restore to the original configuration.", False)
 
+
+# New generator stuff
+gen.add("follower_generator_kp_theta", double_t, 0, "Controller constant", 1.25, 0)
+gen.add("follower_generator_lookahead_distance", double_t, 0, "Controller lookahead", 1.25, 0)
+gen.add("follower_generator_num_trajectories", int_t, 0, "Controller number of trajectories", 3, 0)
+
 exit(gen.generate("dwa_local_planner", "dwa_local_planner", "DWAPlanner"))
