Continued work on queue mode.

--- a/dwa_local_planner/cfg/DWAPlanner.cfg
+++ b/dwa_local_planner/cfg/DWAPlanner.cfg
@@ -46,8 +46,13 @@ gen.add("restore_defaults", bool_t, 0, "Restore to the original configuration.",
 
 
 # New generator stuff
-gen.add("follower_generator_kp_theta", double_t, 0, "Controller constant", 1.25, 0)
-gen.add("follower_generator_lookahead_distance", double_t, 0, "Controller lookahead", 1.25, 0)
-gen.add("follower_generator_num_trajectories", int_t, 0, "Controller number of trajectories", 3, 0)
+gen.add("follower_generator_kp_theta", double_t, 0, "Controller constant", 3.25, 0)
+gen.add("follower_generator_lookahead_distance", double_t, 0, "Controller lookahead", 0.5, 0)
+gen.add("follower_generator_num_trajectories", int_t, 0, "Controller number of trajectories", 2, 0)
+gen.add("always_use_euclidean_goal_distance", bool_t, 0, "Use the euclidean critic for goal distance.", False)
+gen.add("enable_simple_trajectory_generator", bool_t, 0, "Use the standard trajectory generator.", True)
+gen.add("enable_follower_trajectory_generator", bool_t, 0, "Use the follower trajectory generator.", False)
+gen.add("enable_stationary_trajectory_generator", bool_t, 0, "Use the stationary_trajectory_generator.", False)
+
 
 exit(gen.generate("dwa_local_planner", "dwa_local_planner", "DWAPlanner"))
