--- a/dwa_local_planner/cfg/DWAPlannerMode.cfg
+++ b/dwa_local_planner/cfg/DWAPlannerMode.cfg
@@ -5,10 +5,10 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
 
-mode_enum = gen.enum([ gen.const("NORMAL", int_t, 0, "Normal driving mode"),
-                       gen.const("SLOW", int_t, 1, "Go slower"),
-                       gen.const("QUEUE", int_t, 2, "Queue"),
-                       gen.const("STAY_ON_PATH", int_t, 3, "Stay on the path"),
+mode_enum = gen.enum([ gen.const("default", int_t, 0, "Normal driving mode"),
+                       gen.const("slow_motion", int_t, 1, "Go slower"),
+                       gen.const("queue", int_t, 2, "Queue"),
+                       gen.const("stay_on_path", int_t, 3, "Stay on the path"),
                        ],
                        "Enum for mode")
 
