--- a/dwa_local_planner/cfg/DWAPlanner.cfg
+++ b/dwa_local_planner/cfg/DWAPlanner.cfg
@@ -21,6 +21,8 @@ gen.add("occdist_scale", double_t, 0, "The weight for the obstacle distance part
 gen.add("velocity_scale", double_t, 0, "The weight for the velocity part of the cost function", 0.01, 0.0)
 gen.add("jerk_scale", double_t, 0, "The weight for the jerk part of the cost function", 0.01, 0, 5)
 gen.add("euclidean_distance_scale", double_t, 0, "The weight for the euclidean distance part of the cost function", 1.0, 0, 5)
+gen.add("heading_critic_capture_min_radius", double_t, 0, "The weight for the euclidean distance part of the cost function", 0.25, 0, 5)
+gen.add("heading_critic_capture_max_radius", double_t, 0, "The weight for the euclidean distance part of the cost function", 1.0, 0, 5)
 
 
 gen.add("stop_time_buffer", double_t, 0, "The amount of time that the robot must stop before a collision in order for a trajectory to be considered valid in seconds", 0.2, 0)
