Added more heading critic configurability.

--- a/dwa_local_planner/cfg/DWAPlanner.cfg
+++ b/dwa_local_planner/cfg/DWAPlanner.cfg
@@ -23,6 +23,7 @@ gen.add("jerk_scale", double_t, 0, "The weight for the jerk part of the cost fun
 gen.add("euclidean_distance_scale", double_t, 0, "The weight for the euclidean distance part of the cost function", 1.0, 0, 5)
 gen.add("heading_critic_capture_min_radius", double_t, 0, "The weight for the euclidean distance part of the cost function", 0.25, 0, 5)
 gen.add("heading_critic_capture_max_radius", double_t, 0, "The weight for the euclidean distance part of the cost function", 1.0, 0, 5)
+gen.add("heading_critic_half_angle", double_t, 0, "The weight for the euclidean distance part of the cost function", 1.57, 0, 5)
 
 
 gen.add("stop_time_buffer", double_t, 0, "The amount of time that the robot must stop before a collision in order for a trajectory to be considered valid in seconds", 0.2, 0)
