--- a/dwa_local_planner/cfg/DWAPlanner.cfg
+++ b/dwa_local_planner/cfg/DWAPlanner.cfg
@@ -21,9 +21,9 @@ gen.add("occdist_scale", double_t, 0, "The weight for the obstacle distance part
 gen.add("velocity_scale", double_t, 0, "The weight for the velocity part of the cost function", 0.01, 0.0)
 gen.add("jerk_scale", double_t, 0, "The weight for the jerk part of the cost function", 0.01, 0, 5)
 gen.add("euclidean_distance_scale", double_t, 0, "The weight for the euclidean distance part of the cost function", 1.0, 0, 5)
-gen.add("heading_critic_capture_min_radius", double_t, 0, "The weight for the euclidean distance part of the cost function", 0.25, 0, 5)
-gen.add("heading_critic_capture_max_radius", double_t, 0, "The weight for the euclidean distance part of the cost function", 1.0, 0, 5)
-gen.add("heading_critic_half_angle", double_t, 0, "The weight for the euclidean distance part of the cost function", 1.57, 0, 5)
+gen.add("heading_critic_capture_min_radius", double_t, 0, "The minimum capture radius for the heading cost function", 0.25, 0, 5)
+gen.add("heading_critic_capture_max_radius", double_t, 0, "The maximum capture radius of the heading cost function", 1.0, 0, 5)
+gen.add("heading_critic_half_angle", double_t, 0, "The half angle used to reject trajectories in the heading cost function", 1.57, 0, 5)
 
 
 gen.add("stop_time_buffer", double_t, 0, "The amount of time that the robot must stop before a collision in order for a trajectory to be considered valid in seconds", 0.2, 0)
@@ -46,10 +46,10 @@ gen.add("use_dwa", bool_t, 0, "Use dynamic window approach to constrain sampling
 
 gen.add("restore_defaults", bool_t, 0, "Restore to the original configuration.", False)
 
-gen.add("follower_generator_kp_theta", double_t, 0, "Controller constant", 3.25, 0)
-gen.add("follower_generator_lookahead_distance", double_t, 0, "Controller lookahead", 0.5, 0)
-gen.add("follower_generator_num_trajectories", int_t, 0, "Controller number of trajectories", 2, 0)
-gen.add("always_use_euclidean_goal_distance", bool_t, 0, "Use the euclidean critic for goal distance.", False)
+gen.add("follower_generator_kp_theta", double_t, 0, "Controller constant for the follower trajectory generator", 3.25, 0, 100)
+gen.add("follower_generator_lookahead_distance", double_t, 0, "Controller lookahead distance for the follower trajectory generator", 0.5, 0, 10)
+gen.add("follower_generator_num_trajectories", int_t, 0, "Number of trajectories by the follower trajecotry generator", 2, 0, 20)
+gen.add("always_use_euclidean_goal_distance", bool_t, 0, "Always use the euclidean critic for goal distance, even when the robot is not close to the goal.", False)
 gen.add("enable_simple_trajectory_generator", bool_t, 0, "Use the standard trajectory generator.", True)
 gen.add("enable_follower_trajectory_generator", bool_t, 0, "Use the follower trajectory generator.", False)
 gen.add("enable_stationary_trajectory_generator", bool_t, 0, "Use the stationary_trajectory_generator.", False)
