--- a/base_local_planner/CMakeLists.txt
+++ b/base_local_planner/CMakeLists.txt
@@ -24,7 +24,7 @@ find_package(Boost REQUIRED
         )
 
 find_package(Eigen3 REQUIRED)
-find_package(PCL 1.8 REQUIRED QUIET)
+find_package(PCL 1.8 REQUIRED QUIET COMPONENTS io)
 
 include_directories(
     include
@@ -111,7 +111,7 @@ add_library(base_local_planner
     src/speed_limiters/shadow_speed_limiter.cpp
     src/speed_limiters/path_speed_limiter.cpp
     src/speed_limiters/obstacle_speed_limiter.cpp
-    src/speed_limiters/external_speed_limiter.cpp    
+    src/speed_limiters/external_speed_limiter.cpp
     src/stationary_trajectory_generator.cpp
     src/turn_in_place_trajectory_generator.cpp
     src/trajectory.cpp
