feat: add more log

--- a/costmap_2d/cfg/ObstructionPlugin.cfg
+++ b/costmap_2d/cfg/ObstructionPlugin.cfg
@@ -5,7 +5,8 @@ from dynamic_reconfigure.parameter_generator_catkin import ParameterGenerator, b
 gen = ParameterGenerator()
 
 gen.add("enabled", bool_t, 0, "Whether to apply this plugin or not", True)
-gen.add("max_obstacle_height", double_t, 0, "The maximum height of any obstacle to be inserted into the costmap in meters.", 2, 0, 50)
+gen.add("min_obstacle_height", double_t, 0, "The minimum height of any obstacle to be inserted into the costmap in meters.", 0.0, 0, 50)
+gen.add("max_obstacle_height", double_t, 0, "The maximum height of any obstacle to be inserted into the costmap in meters.", 2.0, 0, 50)
 
 gen.add("distance_threshold", double_t, 0, "How close a reading needs to be to the static layer to count as semi-static.", 0.2, 0, 1)
 
