feat: Add new stay still local planner mode for yielding

--- a/dwa_local_planner/cfg/DWAPlannerMode.cfg
+++ b/dwa_local_planner/cfg/DWAPlannerMode.cfg
@@ -8,7 +8,8 @@ gen = ParameterGenerator()
 mode_enum = gen.enum([ gen.const("default", int_t, 0, "Normal driving mode"),
                        gen.const("queue", int_t, 1, "Queue"),
                        gen.const("stay_on_path", int_t, 2, "Stay on the path"),
-                       gen.const("dock", int_t, 3, "Pre-dock planning mode")
+                       gen.const("dock", int_t, 3, "Pre-dock planning mode"),
+                       gen.const("stay_in_place", int_t, 4, "Stay in place mode")
                        ],
                        "Enum for mode")
 
