--- a/robot_pose_ekf/CMakeLists.txt
+++ b/robot_pose_ekf/CMakeLists.txt
@@ -48,7 +48,7 @@ add_executable(robot_pose_ekf
                        src/odom_estimation.cpp 
                        src/nonlinearanalyticconditionalgaussianodo.cpp 
                        src/odom_estimation_node.cpp)
-add_dependencies(robot_pose_ekf ${catkin_EXPORTED_TARGETS})
+add_dependencies(robot_pose_ekf robot_pose_ekf_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
 target_link_libraries(robot_pose_ekf
     ${catkin_LIBRARIES}
     ${Boost_LIBRARIES}
