--- a/costmap_2d/CMakeLists.txt
+++ b/costmap_2d/CMakeLists.txt
@@ -102,7 +102,7 @@ add_library(costmap_2d
   src/footprint.cpp
   src/costmap_layer.cpp
 )
-add_dependencies(costmap_2d ${catkin_EXPORTED_TARGETS})
+add_dependencies(costmap_2d costmap_2d_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
 
 target_link_libraries(costmap_2d
   ${PCL_LIBRARIES}
