--- a/amcl/package.xml
+++ b/amcl/package.xml
@@ -39,6 +39,7 @@
     <exec_depend>dynamic_reconfigure</exec_depend>
     <exec_depend>tf</exec_depend>
     <exec_depend>nav_msgs</exec_depend>
+    <exec_depend>move_base_msgs</exec_depend>
     <exec_depend>srslib_timing</exec_depend>
 
     <test_depend>map_server</test_depend>
