--- a/base_local_planner/CMakeLists.txt
+++ b/base_local_planner/CMakeLists.txt
@@ -16,6 +16,7 @@ find_package(catkin REQUIRED
             pluginlib
             angles
             srslib_timing
+            std_msgs
         )
 
 find_package(Boost REQUIRED
