feat: Latch yaw

--- a/dwa_local_planner/cfg/DWAPlanner.cfg
+++ b/dwa_local_planner/cfg/DWAPlanner.cfg
@@ -66,6 +66,7 @@ gen.add("enable_stationary_trajectory_generator", bool_t, 0, "Use the stationary
 gen.add("enable_tip_trajectory_generator", bool_t, 0, "Use the tip_trajectory_generator.", True)
 
 gen.add("latch_xy_goal_tolerance", bool_t, 0, "Latch the xy goal tolerance", True)
+gen.add("latch_yaw_goal_tolerance", bool_t, 0, "Latch the yaw goal tolerance", False)
 
 gen.add("publish_traj_pc", bool_t, 0, "Publish the debug point cloud.", True)
 
