--- a/dwa_local_planner/cfg/DWAPlanner.cfg
+++ b/dwa_local_planner/cfg/DWAPlanner.cfg
@@ -67,7 +67,8 @@ gen.add("enable_tip_trajectory_generator", bool_t, 0, "Use the tip_trajectory_ge
 
 gen.add("latch_xy_goal_tolerance", bool_t, 0, "Latch the xy goal tolerance", True)
 gen.add("latch_yaw_goal_tolerance", bool_t, 0, "Latch the yaw goal tolerance", False)
-
+gen.add("xy_goal_overshoot_tolerance", double_t, 0, "Reset latching if robot clears this bound in m", 0.2)
+gen.add("yaw_goal_overshoot_tolerance", double_t, 0, "Reset latching if robot clears this yaw bound in rad", 0.1)
 gen.add("publish_traj_pc", bool_t, 0, "Publish the debug point cloud.", True)
 
 exit(gen.generate("dwa_local_planner", "dwa_local_planner", "DWAPlanner"))
